Finish PCA  analysis

--- a/notebooks/PCA.ipynb
+++ b/notebooks/PCA.ipynb
@@ -299,7 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 40,
    "id": "65786874",
    "metadata": {},
    "outputs": [
@@ -334,6 +334,22 @@
     "plt.savefig('../imgs/iris_pca_scatter.png', bbox_inches='tight')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3f4b44e",
+   "metadata": {},
+   "source": [
+    "So as we can see there is tight cluster of Iris Setosa seprated from two others\n",
+    "\n",
+    "Since PC1 AND PC2  captrued ~ 95% of the variance, this 2D plot retains the most information from our 4D dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d9c579cd",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
